--- a/Test/Test.Audio.Foundation.Unmanaged/Test.Audio.Foundation.Unmanaged.vcxproj.filters
+++ b/Test/Test.Audio.Foundation.Unmanaged/Test.Audio.Foundation.Unmanaged.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="OscillatorTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NetPeerServerTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
