--- a/Audio.Asio/Audio.Asio.vcxproj
+++ b/Audio.Asio/Audio.Asio.vcxproj
@@ -16,7 +16,8 @@
     <Keyword>NetCoreCProj</Keyword>
     <RootNamespace>CLRClassLibrary</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+    <WindowsTargetPlatformMinVersion>10.0.19041.0</WindowsTargetPlatformMinVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -116,6 +117,7 @@
     <ClInclude Include="ManagedLooper.h" />
     <ClInclude Include="ManagedLooperConfig.h" />
     <ClInclude Include="LooperEvents.h" />
+    <ClInclude Include="ManagedLooperTrack.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RegisteredDriver.h" />
     <ClInclude Include="resource.h" />
@@ -134,6 +136,7 @@
     <ClCompile Include="ManagedLooper.cpp" />
     <ClCompile Include="ManagedLooperConfig.cpp" />
     <ClCompile Include="LooperEvents.cpp" />
+    <ClCompile Include="ManagedLooperTrack.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
