--- a/Audio.Wasapi/Audio.Wasapi.vcxproj
+++ b/Audio.Wasapi/Audio.Wasapi.vcxproj
@@ -16,8 +16,9 @@
     <Keyword>NetCoreCProj</Keyword>
     <RootNamespace>AudioWasapi</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ProjectName>Audio.Wasapi</ProjectName>
+    <WindowsTargetPlatformMinVersion>10.0.19041.0</WindowsTargetPlatformMinVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
