--- a/Test/Lupus/Lupus.csproj
+++ b/Test/Lupus/Lupus.csproj
@@ -36,7 +36,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="appsettings.json">
+	  <None Update="appsettings.development.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
