--- a/Test/Test.Audio.Foundation/Test.Audio.Foundation.csproj
+++ b/Test/Test.Audio.Foundation/Test.Audio.Foundation.csproj
@@ -10,9 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\bin\Debug\x64\Audio.Foundation.Unmanaged.dll" Link="Audio.Foundation.Unmanaged.dll">
+    <Content Include="..\..\bin\Debug\x64\Audio.Foundation.Unmanaged.dll" Link="Audio.Foundation.Unmanaged.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -28,5 +28,5 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Audio.Foundation\Audio.Foundation.vcxproj" />
   </ItemGroup>
-
+	
 </Project>
